Can now add revision information to a build by defining MILTON_REVISION
Running `./build-lin.sh -DMILTON_REVISION=$(git describe)` on Linux will
generate a binary that prints the closest annotated tag and, if
applicable, the number of commits since the tag and the abbreviated hash
of the current commit in addition to the build type.

If the revision is not specified it will default to "unknown revision"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,11 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif()
 
+if (MILTON_REVISION)
+  add_definitions(-DMILTON_REVISION="${MILTON_REVISION}")
+  unset(MILTON_REVISION CACHE)
+endif()
+
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_definitions(-DMILTON_DEBUG=1)
   set(SDL2_MAIN ${SDL2DIR}/build/linux64/lib/libSDL2maind.a)
